...
                    app:spi_dotSize="@dimen/page_indicator_size"
                    app:spi_dotSpacing="@dimen/page_indicator_space" />

            </FrameLayout>

            <TextView
                android:id="@+id/end_button"
                style="@style/Button.Borderless"
                android:layout_width="match_parent"
                android:text="@string/info_intro_button"
                tools:visibility="invisible" />

        </FrameLayout>

    </LinearLayout>

...
